Fix bad layout of sidebar being too short.

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -2,6 +2,10 @@ html,body  {
     background-image: url("stardust.png");
 }
 
+.-main{
+    height: 100%;
+}
+
 h1 {
     color: $priColor;
 }
